--- a/index.htm
+++ b/index.htm
@@ -13,20 +13,20 @@
 <!-- Navbar (sit on top) -->
 <div class="w3-top">
   <div class="w3-bar" id="myNavbar">
-    <a class="w3-bar-item w3-button w3-hover-black w3-hide-medium w3-hide-large w3-right" href="javascript:void(0);" onclick="toggleFunction()" title="Toggle Navigation Menu">
+    <a class="w3-bar-item w3-button w3-hide-medium w3-hide-large w3-right w3-text-black" href="javascript:void(0);" onclick="toggleFunction()" title="Toggle Navigation Menu">
       <i class="fa fa-bars"></i>
     </a>
-    <a href="#home" class="w3-bar-item w3-button w3-text-black"><i class="fas fa-home"></i></a>
-    <a href="#about" class="w3-bar-item w3-button w3-hide-small w3-text-black"><i class="fas fa-user"></i> SOBRE NÓS</a>
-    <a href="#portfolio" class="w3-bar-item w3-button w3-hide-small w3-text-black"><i class="fas fa-th"></i> MARCAS</a>
-    <a href="#contact" class="w3-bar-item w3-button w3-hide-small w3-text-black"><i class="fas fa-envelope"></i> CONTATO</a>
+    <a onclick="scrollToHome()" class="w3-bar-item w3-button w3-text-black"><i class="fas fa-home"></i></a>
+    <a onclick="scrollToAbout()" class="w3-bar-item w3-button w3-hide-small w3-text-black"><i class="fas fa-user"></i> SOBRE</a>
+    <a onclick="scrollToBrands()" class="w3-bar-item w3-button w3-hide-small w3-text-black"><i class="fas fa-tags"></i> MARCAS</a>
+    <a onclick="scrollToContact()" class="w3-bar-item w3-button w3-hide-small w3-text-black"><i class="fas fa-envelope"></i> CONTATO</a>
   </div>
 
   <!-- Navbar on small screens -->
   <div id="navDemo" class="w3-bar-block w3-white w3-hide w3-hide-large w3-hide-medium">
-    <a href="#about" class="w3-bar-item w3-button" onclick="toggleFunction()">ABOUT</a>
-    <a href="#portfolio" class="w3-bar-item w3-button" onclick="toggleFunction()">PORTFOLIO</a>
-    <a href="#contact" class="w3-bar-item w3-button" onclick="toggleFunction()">CONTACT</a>
+    <a class="w3-bar-item w3-button" onclick="scrollToAbout()">SOBRE</a>
+    <a class="w3-bar-item w3-button" onclick="scrollToBrands()">MARCAS</a>
+    <a class="w3-bar-item w3-button" onclick="scrollToContact()">CONTATO</a>
   </div>
 </div>
 
@@ -86,7 +86,7 @@
 </div>
 
 <!-- Container (Portfolio Section) -->
-<div class="w3-content w3-container w3-padding-64" id="portfolio">
+<div class="w3-content w3-container w3-padding-64" id="brands">
   <h3 class="w3-center">Nossas Marcas</h3>
   <p class="w3-center"><em>Algumas das marcas que trabalhamos.<br></em></p><br>
 
@@ -156,11 +156,11 @@
     </div>
     <div class="w3-col m6 w3-panel">
       <div class="w3-large w3-margin-bottom">
-        <i class="fa fa-map-marker fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> Av Souza Naves 483, Ibiporã, PR<br>
-        <i class="fa fa-phone fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> Phone: +00 151515<br>
-        <i class="fa fa-envelope fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> Email: mail@mail.com<br>
+        <i class="fas fa-map-marker-alt fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> Av Souza Naves 483, Ibiporã, PR<br>
+        <i class="fas fa-phone fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> Phone: +00 151515<br>
+        <i class="fas fa-envelope fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> Email: mail@mail.com<br>
       </div>
-      <p>Dê uma passadinha para um <i class="fa fa-coffee"></i>, ou deixe-nos uma mensagem:</p>
+      <p>Dê uma passadinha para um <i class="fas fa-coffee"></i>, ou deixe-nos uma mensagem:</p>
       <form action="/action_page.php" target="_blank">
         <div class="w3-row-padding" style="margin:0 -16px 8px -16px">
           <div class="w3-half">
@@ -180,15 +180,11 @@
 </div>
 
 <!-- Footer -->
-<footer class="w3-center pink w3-padding-64">
-  <a href="#home" class="w3-button w3-light-grey w3-text-black"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
+<footer class="w3-center pink w3-padding-32">
+  <a onclick="scrollToHome()" class="w3-button w3-light-grey w3-text-black"><i class="fa fa-arrow-up w3-margin-right"></i>Voltar ao topo</a>
   <div class="w3-xlarge w3-section">
-    <i class="fab fa-facebook-official w3-hover-opacity"></i>
+    <i class="fab fa-facebook w3-hover-opacity"></i>
     <i class="fab fa-instagram w3-hover-opacity"></i>
-    <i class="fab fa-snapchat w3-hover-opacity"></i>
-    <i class="fab fa-pinterest-p w3-hover-opacity"></i>
-    <i class="fab fa-twitter w3-hover-opacity"></i>
-    <i class="fab fa-linkedin w3-hover-opacity"></i>
   </div>
   <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-text-green">w3.css</a></p>
 </footer>
