small improvements on content

--- a/index.htm
+++ b/index.htm
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<title>W3.CSS Template</title>
+<title>Rosa Mística Modas</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="css/w3.css">
@@ -17,7 +17,7 @@
       <i class="fa fa-bars"></i>
     </a>
     <a onclick="scrollToHome()" class="w3-bar-item w3-button w3-text-black"><i class="fas fa-home"></i></a>
-    <a onclick="scrollToAbout()" class="w3-bar-item w3-button w3-hide-small w3-text-black"><i class="fas fa-user"></i> SOBRE</a>
+    <a onclick="scrollToAbout()" class="w3-bar-item w3-button w3-hide-small w3-text-black"><i class="fas fa-users"></i> SOBRE</a>
     <a onclick="scrollToBrands()" class="w3-bar-item w3-button w3-hide-small w3-text-black"><i class="fas fa-tags"></i> MARCAS</a>
     <a onclick="scrollToContact()" class="w3-bar-item w3-button w3-hide-small w3-text-black"><i class="fas fa-envelope"></i> CONTATO</a>
   </div>
@@ -47,7 +47,7 @@
   <div class="w3-row">
     <div class="w3-col m6 w3-center w3-padding-large">
       <p><b><i class="fa fa-user w3-margin-right"></i>My Name</b></p><br>
-      <img src="/w3images/avatar_hat.jpg" class="w3-round w3-image w3-opacity w3-hover-opacity-off" alt="Photo of Me" width="500" height="333">
+      <img src="images/loja2.jpg" class="w3-round w3-image w3-opacity w3-hover-opacity-off" alt="Photo of Me" width="500" height="333">
     </div>
 
     <!-- Hide this text on small devices -->
@@ -164,13 +164,13 @@
       <form action="/action_page.php" target="_blank">
         <div class="w3-row-padding" style="margin:0 -16px 8px -16px">
           <div class="w3-half">
-            <input class="w3-input w3-border" type="text" placeholder="Name" required name="Name">
+            <input class="w3-input w3-border" type="text" placeholder="Nome" required name="Name">
           </div>
           <div class="w3-half">
             <input class="w3-input w3-border" type="text" placeholder="Email" required name="Email">
           </div>
         </div>
-        <input class="w3-input w3-border" type="text" placeholder="Message" required name="Message">
+        <input class="w3-input w3-border" type="text" placeholder="mensagem" required name="Message">
         <button class="w3-button w3-black w3-right w3-section" type="submit">
           <i class="fa fa-paper-plane"></i> SEND MESSAGE
         </button>
