--- a/index.htm
+++ b/index.htm
@@ -93,37 +93,37 @@
   <!-- Responsive Grid. Four columns on tablets, laptops and desktops. Will stack on mobile devices/small screens (100% width) -->
   <div class="w3-row-padding w3-center">
     <div class="w3-col m3">
-      <img src="/w3images/p1.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="The mist over the mountains">
+      <img src="images/brands/di-lucky.png" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity w3-border" alt="Di Lucky">
     </div>
 
     <div class="w3-col m3">
-      <img src="/w3images/p2.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Coffee beans">
+      <img src="images/brands/morena_rosa.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity w3-border" alt="Morena Rosa">
     </div>
 
     <div class="w3-col m3">
-      <img src="/w3images/p3.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Bear closeup">
+      <img src="images/brands/cantao.png" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity w3-border" alt="Cantao">
     </div>
 
     <div class="w3-col m3">
-      <img src="/w3images/p4.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Quiet ocean">
+      <img src="images/brands/boomerang.png" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity w3-border" alt="Boomerang">
     </div>
   </div>
 
   <div class="w3-row-padding w3-center w3-section">
     <div class="w3-col m3">
-      <img src="/w3images/p5.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="The mist">
+      <img src="images/brands/criative.png" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity w3-border" alt="Criative">
     </div>
 
     <div class="w3-col m3">
-      <img src="/w3images/p6.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="My beloved typewriter">
+      <img src="images/brands/ezutus.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity w3-border" alt="Ezutus">
     </div>
 
     <div class="w3-col m3">
-      <img src="/w3images/p7.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Empty ghost train">
+      <img src="images/brands/claudia_rabelo.png" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity w3-border" alt="Claudia Rabelo">
     </div>
 
     <div class="w3-col m3">
-      <img src="/w3images/p8.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Sailing">
+      <img src="images/brands/farm.png" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity w3-border" alt="Farm">
     </div>
   </div>
 </div>
