--- a/index.htm
+++ b/index.htm
@@ -21,6 +21,8 @@
     <a onclick="scrollToAbout()" class="w3-bar-item w3-button w3-hide-small w3-text-black"><i class="fas fa-users"></i> SOBRE</a>
     <a onclick="scrollToBrands()" class="w3-bar-item w3-button w3-hide-small w3-text-black"><i class="fas fa-tags"></i> MARCAS</a>
     <a onclick="scrollToContact()" class="w3-bar-item w3-button w3-hide-small w3-text-black"><i class="fas fa-envelope"></i> CONTATO</a>
+    <a href="#" class="w3-bar-item w3-button w3-text-black w3-right w3-hide-small"><i class="fab fa-facebook fa-lg"></i></a>
+    <a href="#" class="w3-bar-item w3-button w3-text-black w3-right w3-hide-small"><i class="fab fa-instagram fa-lg"></i></a>
   </div>
 
   <!-- Navbar on small screens -->
@@ -47,8 +49,7 @@
     qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
   <div class="w3-row">
     <div class="w3-col m6 w3-center w3-padding-large">
-      <p><b><i class="fa fa-user w3-margin-right"></i>My Name</b></p><br>
-      <img src="images/loja2.jpg" class="w3-round w3-image w3-opacity w3-hover-opacity-off" alt="Photo of Me" width="500" height="333">
+      <img src="images/loja.jpg" class="w3-round w3-image w3-opacity w3-hover-opacity-off" alt="Photo of Me" width="500" height="333">
     </div>
 
     <!-- Hide this text on small devices -->
@@ -62,15 +63,15 @@
 
 <div class="w3-row w3-center w3-dark-grey w3-padding-16">
   <div class="w3-quarter w3-section">
-    <span class="w3-xlarge">14+</span><br>
+    <span class="w3-xlarge">10+</span><br>
     Anos de Mercado
   </div>
   <div class="w3-quarter w3-section">
-    <span class="w3-xlarge">55+</span><br>
+    <span class="w3-xlarge">20+</span><br>
     Marcas Femininas
   </div>
   <div class="w3-quarter w3-section">
-    <span class="w3-xlarge">89+</span><br>
+    <span class="w3-xlarge">15+</span><br>
     Marcas Masculinas
   </div>
   <div class="w3-quarter w3-section">
@@ -174,6 +175,11 @@
         <button class="w3-button pink w3-right w3-section w3-text-black" type="submit">
           <i class="fa fa-paper-plane"></i> Enviar Mensagem
         </button>
+        <div class="w3-section w3-padding-32">
+          <p>Redes Sociais</p>
+          <a href="#" class="w3-hover-text-black"><i class="fab fa-facebook fa-2x"></i></a>
+          <a href="#" class="w3-hover-text-black"><i class="fab fa-instagram fa-2x"></i></a>
+      </div>
       </form>
     </div>
   </div>
