--- a/index.htm
+++ b/index.htm
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="css/main.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css">
+  <link rel="icon" type="image/png" sizes="96x96" href="images/favicon-96x96.png">
 </head>
 
 <body>
@@ -21,8 +22,8 @@
     <a onclick="scrollToAbout()" class="w3-bar-item w3-button w3-hide-small w3-text-black"><i class="fas fa-users"></i> SOBRE</a>
     <a onclick="scrollToBrands()" class="w3-bar-item w3-button w3-hide-small w3-text-black"><i class="fas fa-tags"></i> MARCAS</a>
     <a onclick="scrollToContact()" class="w3-bar-item w3-button w3-hide-small w3-text-black"><i class="fas fa-envelope"></i> CONTATO</a>
-    <a href="#" class="w3-bar-item w3-button w3-text-black w3-right w3-hide-small"><i class="fab fa-facebook fa-lg"></i></a>
     <a href="#" class="w3-bar-item w3-button w3-text-black w3-right w3-hide-small"><i class="fab fa-instagram fa-lg"></i></a>
+    <a href="#" class="w3-bar-item w3-button w3-text-black w3-right w3-hide-small"><i class="fab fa-facebook fa-lg"></i></a>
   </div>
 
   <!-- Navbar on small screens -->
@@ -36,7 +37,10 @@
 <!-- First Parallax Image with Text -->
 <div class="bgimg-1 w3-display-container w3-opacity-min" id="home">
   <div class="w3-display-middle" style="white-space:nowrap;">
-    <span class="w3-center w3-padding-large w3-black w3-xxlarge w3-wide w3-animate-opacity">ROSA MISTICA <span class="w3-hide-small">MODAS</span></span>
+    <img src="images/Rosa-MisticaSemTexto.png" class="w3-iamge center" style=" max-width: 100%; height: auto;">
+    <div class="">
+      <p class="w3-center w3-padding-large w3-black w3-xxlarge w3-wide w3-animate-opacity" style="white-space: normal;">ROSA MISTICA MODAS</p>
+    </div>
   </div>
 </div>
 
@@ -49,15 +53,12 @@
     qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
   <div class="w3-row">
     <div class="w3-col m6 w3-center w3-padding-large">
-      <img src="images/loja.jpg" class="w3-round w3-image w3-opacity w3-hover-opacity-off" alt="Photo of Me" width="500" height="333">
+      <img src="images/clothes.jpeg" class="w3-round w3-image w3-opacity w3-hover-opacity-off" alt="loja" width="500" height="333">
+    </div>
+    <div class="w3-col m6 w3-center w3-padding-large">
+      <img src="images/bijoux.jpeg" class="w3-round w3-image w3-opacity w3-hover-opacity-off" alt="bijoux" width="500" height="333">
     </div>
 
-    <!-- Hide this text on small devices -->
-    <div class="w3-col m6 w3-hide-small w3-padding-large">
-      <p>Welcome to my website. I am lorem ipsum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
-        dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor
-        incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-    </div>
   </div>
 </div>
 
@@ -94,38 +95,41 @@
 
   <!-- Responsive Grid. Four columns on tablets, laptops and desktops. Will stack on mobile devices/small screens (100% width) -->
   <div class="w3-row-padding w3-center">
+
+
     <div class="w3-col m3">
-      <img src="images/brands/di-lucky.png" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity w3-border" alt="Di Lucky">
+      <img src="images/brands/ezutus.jpg" style="width:100%" onclick="onClick(this)" class="w3-border brand" alt="Ezutus">
     </div>
 
     <div class="w3-col m3">
-      <img src="images/brands/morena_rosa.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity w3-border" alt="Morena Rosa">
+      <img src="images/brands/morena_rosa.jpg" style="width:100%" onclick="onClick(this)" class="w3-border brand" alt="Morena Rosa">
     </div>
 
     <div class="w3-col m3">
-      <img src="images/brands/cantao.png" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity w3-border" alt="Cantao">
+      <img src="images/brands/cantao.png" style="width:100%" onclick="onClick(this)" class="w3-border brand" alt="Cantao">
     </div>
 
     <div class="w3-col m3">
-      <img src="images/brands/boomerang.png" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity w3-border" alt="Boomerang">
+      <img src="images/brands/farm.png" style="width:100%" onclick="onClick(this)" class="w3-border brand" alt="Farm">
     </div>
+
   </div>
 
   <div class="w3-row-padding w3-center w3-section">
     <div class="w3-col m3">
-      <img src="images/brands/criative.png" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity w3-border" alt="Criative">
+      <img src="images/brands/criative.png" style="width:100%" onclick="onClick(this)" class="w3-border brand" alt="Criative">
     </div>
 
     <div class="w3-col m3">
-      <img src="images/brands/ezutus.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity w3-border" alt="Ezutus">
+      <img src="images/brands/di-lucky.png" style="width:100%" onclick="onClick(this)" class="w3-border brand" alt="Di Lucky">
     </div>
 
     <div class="w3-col m3">
-      <img src="images/brands/claudia_rabelo.png" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity w3-border" alt="Claudia Rabelo">
+      <img src="images/brands/claudia_rabelo.png" style="width:100%" onclick="onClick(this)" class="w3-border brand" alt="Claudia Rabelo">
     </div>
 
     <div class="w3-col m3">
-      <img src="images/brands/farm.png" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity w3-border" alt="Farm">
+      <img src="images/brands/boomerang.png" style="width:100%" onclick="onClick(this)" class="w3-border brand" alt="Boomerang">
     </div>
   </div>
 </div>
