--- a/index.htm
+++ b/index.htm
@@ -28,9 +28,9 @@
 
   <!-- Navbar on small screens -->
   <div id="navDemo" class="w3-bar-block w3-white w3-hide w3-hide-large w3-hide-medium">
-    <a class="w3-bar-item w3-button" onclick="scrollToAbout()">SOBRE</a>
-    <a class="w3-bar-item w3-button" onclick="scrollToBrands()">MARCAS</a>
-    <a class="w3-bar-item w3-button" onclick="scrollToContact()">CONTATO</a>
+    <a href="#about" class="w3-bar-item w3-button" onclick="toggleFunction()">SOBRE</a>
+    <a href="#brands" class="w3-bar-item w3-button" onclick="toggleFunction()">MARCAS</a>
+    <a href="#contact" class="w3-bar-item w3-button" onclick="toggleFunction()">CONTATO</a>
   </div>
 </div>
 
