--- a/index.htm
+++ b/index.htm
@@ -166,7 +166,7 @@
         <i class="fas fa-phone fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> Fone: (43) 3158-0404<br>
       </div>
       <p>Dê uma passadinha para um <i class="fas fa-coffee"></i>, ou deixe-nos uma mensagem:</p>
-      <form accept-charset="UTF-8" action="https://usebasin.com/f/4cef0d84eb00" method="POST" target="_blank">
+      <form name="contact-form" accept-charset="UTF-8" action="https://usebasin.com/f/4cef0d84eb00" method="POST" target="dummyframe">
         <div class="w3-row-padding" style="margin:0 -16px 8px -16px">
           <div class="w3-half">
             <input class="w3-input w3-border" id="name" type="text" placeholder="Seu Nome" required name="Nome">
@@ -176,9 +176,10 @@
           </div>
         </div>
         <input class="w3-input w3-border" type="text" placeholder="Mensagem" required name="Mensagem">
-        <button class="w3-button pink w3-right w3-section w3-text-black" type="submit">
+        <button class="w3-button pink w3-right w3-section w3-text-black" type="reset" onclick="submit()">
           <i class="fa fa-paper-plane"></i> Enviar Mensagem
         </button>
+        <iframe width="0" height="0" border="0" name="dummyframe" id="dummyframe"></iframe>
         <div class="w3-section w3-padding-32">
           <p>Redes Sociais</p>
           <a href="#" class="w3-hover-text-black"><i class="fab fa-facebook fa-2x"></i></a>
